# capora-kernel

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  linker_script.ld
kernel/src/: cells.rs  logging.rs  main.rs  spinlock.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: debugcon.rs  logging.rs  mod.rs  serial.rs
kernel/src/arch/x86_64/boot/: capora_boot_stub.rs  limine.rs  mod.rs
kernel/src/arch/x86_64/memory/: mod.rs
kernel/src/arch/x86_64/structures/: gdt.rs  idt.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
