[package]
name = "kernel"
version = "0.1.0"
authors.workspace = true 
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = [ "capora-boot-api", "limine-boot-api" ]

capora-boot-api = ["dep:boot-api"]
limine-boot-api = []

debugcon = []

[dependencies]
boot-api = { git = "https://github.com/JarlEvanson/capora-boot-api.git", optional = true }
