[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = "4.5.16"

boot-stub = { git = "https://github.com/JarlEvanson/capora-boot-stub.git", artifact = "bin", target = "x86_64-unknown-uefi" }
config = { git = "https://github.com/JarlEvanson/capora-boot-stub.git", artifact = "bin", features = [ "ctl" ] }
